--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -3,10 +3,10 @@ header {
   background-color: $primary-color;
   // margin: 0 0 2vh 0;
   width: 100%;
-  padding: 2vh;
+  padding: 2vh 0 2vh 1vw;
 
   h1 {
     color: $heading-light;
-    margin: 1vh 0vw 1vh 2.5vw;
+    margin: 1vh 0vw 1vh 1vw;
   }
 }
